# memory-graph-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROTOCOL.md  README.md  perfector_node.schema.json  protocol.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/docs/: index.html  tree-sitter-parsing.md
.github/workflows/: ci.yml
commands/: memory-recall.md
docs/: INSPIRATION.md
eval/: eval_set.json
examples/: .mcp.json  quickstart.py
memory_graph/: __init__.py  benchmark.py  collective.py  db.py  embedding_admin.py  embeddings.py  intelligence.py  knowledge_graph.py  parsers.py  server.py  settings.py  tool_cache.py  topics.py  unified.py  vector_store.py  wiki.py
scripts/: release.sh  setup-github.sh
skills/memory-graph/: SKILL.md
tests/: test_embedding_providers.py  test_end_to_end.py  test_parsers.py  test_plugin_artifacts.py  test_storm_features.py  test_workspace_settings.py
